# second-order-transformers

./: README.md  main.py  pyproject.toml
pooling_lib/: MatrixEmbeddingSimilarityEvaluator.py  SVDLayer.py  SchattenSimilarityLoss.py
